<resources>
    <string name="app_name">Twitter Query</string>
    <string name="edit_message">Search Twitter</string>
    <string name="button_send">Send</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Twitter Query</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_prev">Prev</string>
    <string name="button_next">Next</string>
    <string name="button_load">Load</string>
    <string name="tweet_Name_Holder">Twitter User</string>
    <string name="tweet_Holder">Tweet</string>
     <string name="tweet_Pic">Tweet Picture</string>
</resources>